# minimal-spotify

./: Cargo.toml
src/: main.rs
src/api/: auth.rs  constants.rs  mod.rs  request.rs  utils.rs
