[package]
name = "minimal-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = "1.33.0"
